worked out html static sourcing now troubleshooting issues with linkingi html to js file

--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,18 @@
 	<p>Ever wanted to know the real truth about your potential new landlord?</p>
 	<p>Ever wanted a place to vent about or celebrate your landlord?</p>
 	<p>Well here's your chance!</p>
-	<button class="js-login-button" href="/api/users/login">Login
-	</button>
-	<button class="js-register-button" onclick="window.location='/api/users/register'">New User? Register Here!
+	<a class="js-login-button" href="./login.html">Login
+	</a>
+	<a class="js-register-button" href="./register.html">New User? Register Here!
 
-	</button>
+	</a>
+	<a class="js-dashboard-button" href="./dashboard.html">My Dashboard</a>
 
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
 
 	<script type="text/javascript" src="./js/index.js"></script>
 
