--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,8 +9,11 @@
 <body>
 
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
 
-	<script type="text/javascript" src="../controllers/index.js"></script>
+	<script type="text/javascript" src="../js/index.js"></script>
 </body>
 </html>
