continued work on front-end views navigation

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	
 	<div class="js-container-1">
 		<p>Welcome to LandLordScore!</p>
 		<p>Ever wanted to know the real truth about your potential new landlord?</p>
@@ -30,9 +31,15 @@
 	</div>
 
 	<div class="js-container-3">
-		<button class="js-login-button">Login</button>
+		<a href="#login" class="js-login-button">Login</a>
 		<button class="js-register-button">New User? Register Here!</button>
 		<button class="js-dashboard-button">My Dashboard</button>
+		<button class="js-all-entries-button">View All Entries</button>
+	</div>
+
+	<div class="js-container-4">
+
+	</div>
 
 	<script
   src="https://code.jquery.com/jquery-3.3.1.js"
