--- a/public/index.html
+++ b/public/index.html
@@ -19,15 +19,11 @@
 	</div>
 
 	<div class="js-container-2">
-		<form class="landlord-search-form">
-			<label for="landlord-search-input">Search By Landlord:</label>
-			<input id="landlord-search-input" type="text" name="landlord-search-input">
-		</form class="landlord-search-form">
-
-		<form class="address-search-form">
-			<label>Search By Address:</label>
-			<input id="address-search-input" type="text" name="address-search-input">
-		</form>	
+		<form class="js-entry-search-form">
+			<label for="js-entry-search-input">Search</label>
+			<input id="js-entry-search-input" type="text" name=" js-entry-search-input">
+			<input class="js-entry-search-submit" type="submit" name="js-entry-search-submit">
+		</form>
 	</div>
 
 	<div class="js-container-3">
